# django_live_log

./: .gitignore  .gitlab-ci.yml  pyproject.toml  requirements-test.txt  setup.py  tox.ini
django_live_log/: views.py
django_live_log.egg-info/: PKG-INFO
tests/: settings.py  test_views.py
