[project]
name = "django_live_log"
authors = [
    {name = "Abdul Latheef", email = "latheefvkpadi@gmail.com"},
]
description = "Simple package for live streaming of file."
readme = "README.rst"
requires-python = ">=2.7"
keywords = [
    "django",
    "live",
    "log",
]
license = {text = "MIT"}
classifiers = [
        'Environment :: Web Environment',
        'Framework :: Django',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: BSD License',  # example license
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        # Replace these appropriately if you are stuck on Python 2.
        'Programming Language :: Python :: 2.7',
        'Topic :: Internet :: WWW/HTTP',
        'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]
dependencies = [
    "Django(>=2.1.3)",
#    "pyyaml",
]
dynamic = ["version"]

[project.urls]
# orig repo: https://github.com/abdullatheef/django_live_log
repository = "https://gitlab.com/machine-insight/django_live_log"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# version_file = "admin_datadump/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "django_live_log",
]
# exclude = ["docs*", "tests"]
